# b-prefix-index

./: .agents.yml  .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md
examples/: sample_events.jsonl
prefix_indexer/: __init__.py  analytics.py  api.py  cli.py  models.py  service.py  service_http.py  storage.py
scripts/: bootstrap_env.py
tests/: test_analytics.py  test_cli.py  test_http_service.py  test_service.py
