[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "offline-prefix-index"
version = "0.1.0"
description = "Offline prefix popularity indexer for KV cache planners."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Offline Prefix Index Team" }]
license = { text = "Proprietary" }
dependencies = [
  "pydantic>=2.12.3",
  "pyyaml>=6.0.3",
  "fastapi>=0.120.3",
  "starlette>=0.49.1",
  "uvicorn[standard]>=0.38.0",
]
keywords = ["llm", "cache", "prefix", "index"]

[project.optional-dependencies]
dev = [
  "black>=25.9.0",
  "ruff>=0.14.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "bandit>=1.8.6",
  "detect-secrets>=1.5.0",
  "pip-audit>=2.9.0",
  "types-PyYAML>=6.0.12.20250915",
  "httpx>=0.28.1",
]

[project.scripts]
prefix-indexer = "prefix_indexer.cli:main"
prefix-indexer-http = "prefix_indexer.service_http:run"

[tool.hatch.build.targets.wheel]
packages = ["prefix_indexer"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["prefix_indexer", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DTZ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["prefix_indexer"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]
mypy_path = "."

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=prefix_indexer --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["prefix_indexer"]

[tool.coverage.report]
show_missing = true
skip_empty = true
